--- a/rilegaturaTesi.html
+++ b/rilegaturaTesi.html
@@ -33,8 +33,8 @@
 					<div id="header" class="container">
 						
 						<!-- Logo -->
-							<h1 id="logo"><a href="#">Strongly Typed</a></h1>
-							<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
+							<h1 id="logo">Rilegatura Tesi</h1>
+							<p>Rilega la tua tesi in 1 ORA</p>
 						
 						<!-- Nav -->
                         <nav id="nav">
