--- a/rilegaturaTesi.html
+++ b/rilegaturaTesi.html
@@ -22,7 +22,7 @@
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-desktop.css" />
-		</noscript>
+        </noscript>
 	</head>
 	<body class="no-sidebar">
 
@@ -94,73 +94,14 @@
 									<!-- Post -->
 										<article class="is-post">
 											<header>
-												<h2>Behold! This is the <strong>no sidebar</strong> layout<br />
-												with no sidebar at all!</h2>
+												<h2>Rilegatura Tesi in <b>1 ORA</b></h2>
 											</header>
 											<span class="image image-full"><img src="images/pic04.jpg" alt="" /></span>
-											<h3>And yeah, that's basically it</h3>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit 
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris 
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada 
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat 
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros 
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id 
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet 
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. 
-											Curabitur leo nibh, rutrum eu malesuada in, tristique at erat.</p>
-											<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat 
-											Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit ligula 
-											vel quam viverra sit amet mollis tortor congue. Sed quis mauris sit amet 
-											magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada in, 
-											tristique at erat. Curabitur leo nibh, rutrum eu malesuada  in, tristique 
-											at erat lorem ipsum dolor sit amet lorem ipsum sed consequat magna 
-											tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros consequat 
-											magna tempus</p>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit 
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris 
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada 
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat 
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id 
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat 
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros 
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id 
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet 
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. 
-											Curabitur leo nibh, rutrum eu malesuada in, tristique at erat.</p>
-											<h3>Accumsan lorem ipsum veroeros</h3>
-											<p>Consequat Phasellus laoreet massa id in, tristique at erat lorem 
-											ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros 
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id 
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet 
-											mollis tortor congue. Sed quis mauris sit amet magna.</p>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit 
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris 
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada 
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat 
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id 
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat 
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros 
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id 
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet 
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. 
-											Curabitur leo nibh, rutrum eu malesuada in, tristique at erat.</p>
-											<h3>Ligula suspcipit fusce veroeros</h3>
-											<p>Nullam dolore etiam sed massa id in, tristique at erat lorem 
-											ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros 
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id 
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet 
-											mollis tortor congue. Sed quis mauris sit amet magna.</p>
-											<p>Sed massa id justo mattis pharetra. Fusce suscipit 
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris 
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada 
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat 
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id 
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat 
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros 
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id 
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet 
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan.</p>
-										</article>
+											<h3>in Pelle o Tela con Incisione</h3>
+											<p><b style="color: #D4A017">Oro</b>  <b style="color: #C0C0C0">Argento</b>  <b style="color: #CC0000">Rossa</b>  <b style="color: #CC0066">Fucsia</b>  <b style="color: #663399">Blu</b>  <b style="color: #339933">Verde</b></p>
+											<div id="3D"><h3>Prendi 4 paghi 3</h3></div>
+											<p>La rilegatura completa di incisione a 17&euro;, con l'offerta prendi 4 paghi 3 a 51&euro; </p>
+											</article>
 								
 								</div>
 								
