--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                                             <li><a href="http://universitaliaeditrice.it/" target="_blank">Pubblica con noi</a></li>
                                          </ul>
                                     </li>
+                                    <li>
+                                        <a href="" class="fa fa-shopping-cart"><span>UniShop</span></a>
+                                    </li>
 								</ul>
 							</nav>
 
