--- a/index.html
+++ b/index.html
@@ -33,15 +33,13 @@
 						
 				<!-- Header -->
 					<div id="header" class="container">
-						
-
 
 						<!-- Nav -->
 							<nav id="nav">
                                 <!-- Logo -->
-                                <br>
-                                <h1 id="logo"><a href="#">Universitalia</a></h1><br><br><br><br>
-								<ul>
+
+                                <h1 id="logo"><a href="#">Universitalia</a></h1>
+                                <ul>
                                     <li>
                                         <a class="fa fa-home" href="index.html"><span>Home</span></a>
                                         <ul>
@@ -64,24 +62,24 @@
                                         <a href="rilegaturaTesi.html" class="fa fa-graduation-cap"><span>Rilegatura Tesi</span></a>
                                     </li>
 
-									<li>
-										<a href="" class="fa fa-print"><span>Servizi</span></a>
-										<ul>
-											<li><a href="plotter.html">Plotter</a></li>
-											<li><a href="stampe.html">Stampe</a></li>
+                                    <li>
+                                        <a href="" class="fa fa-print"><span>Stampe Digitali</span></a>
+                                        <ul>
+                                            <li><a href="plotter.html">Plotter</a></li>
+                                            <li><a href="stampe.html">Stampe</a></li>
                                             <li><a href="timbri.html">Timbri</a></li>
-										</ul>
-									</li>
+                                        </ul>
+                                    </li>
                                     <li>
                                         <a href="" class="fa fa-book"><span>Editoria</span></a>
                                         <ul>
                                             <li><a href="http://universitaliaeditrice.it/" target="_blank">Pubblica con noi</a></li>
-                                         </ul>
+                                        </ul>
                                     </li>
                                     <li>
                                         <a href="" class="fa fa-shopping-cart"><span>UniShop</span></a>
                                     </li>
-								</ul>
+                                </ul>
 							</nav>
 
 					</div>
