--- a/TestIngresso.html
+++ b/TestIngresso.html
@@ -39,12 +39,8 @@
 
 						<!-- Nav -->
                         <nav id="nav">
-
                             <br>
-                            <br>
-                            <h1 id="logo"><a href="#">Test d'ingresso</a></h1>
-
-                            <br><br><br>
+                            <h1 id="logo"><a href="#">Universitalia</a></h1><br><br><br>
                             <ul>
                                 <li>
                                     <a class="fa fa-home" href="index.html"><span>Home</span></a>
