--- a/plotter.html
+++ b/plotter.html
@@ -45,15 +45,15 @@
         <!-- Nav -->
         <nav id="nav">
             <br>
-            <h1 id="logo"><a href="#">Plotter</a></h1><br><br><br><br>
+            <h1 id="logo"><a href="#">Universitalia</a></h1><br><br><br>
             <ul>
                 <li>
                     <a class="fa fa-home" href="index.html"><span>Home</span></a>
                     <ul>
-                        <li><a href="index.html#chisiamo">Chi siamo</a></li>
-                        <li><a href="index.html#dovesiamo">Dove siamo</a></li>
-                        <li><a href="rilegaturaTesi.html">Rilegature Tesi</a></li>
-                        <li><a href="index.html#news">News</a></li>
+                        <li><a href="#chisiamo">Chi siamo</a></li>
+                        <li><a href="#dovesiamo">Dove siamo</a></li>
+                        <li><a href="#rilegaturatesi">Rilegature Tesi</a></li>
+                        <li><a href="#news">News</a></li>
 
                     </ul>
 
@@ -61,16 +61,16 @@
                 <li>
                     <a href="" class="fa fa-book"><span>Libri</span></a>
                     <ul>
-                        <li><a href="index.html#libreriaonline">Ricerca Libri</a></li>
-                        <li><a href="TestIngresso.html">Test d'ingresso</a></li>
+                        <li><a href="#libreriaonline">Ricerca Libri</a></li>
+                        <li><a href="testIngresso.html">Test d'ingresso</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="rilegaturaTesi.html" class="fa fa-bookmark"><span>Rilegatura Tesi</span></a>
+                    <a href="rilegaturaTesi.html" class="fa fa-graduation-cap"><span>Rilegatura Tesi</span></a>
                 </li>
 
                 <li>
-                    <a href="" class="fa fa-tasks"><span>Servizi</span></a>
+                    <a href="" class="fa fa-print"><span>Stampe Digitali</span></a>
                     <ul>
                         <li><a href="plotter.html">Plotter</a></li>
                         <li><a href="stampe.html">Stampe</a></li>
@@ -78,10 +78,13 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="" class="fa fa-bookmark-o"><span>Editoria</span></a>
+                    <a href="" class="fa fa-book"><span>Editoria</span></a>
                     <ul>
                         <li><a href="http://universitaliaeditrice.it/" target="_blank">Pubblica con noi</a></li>
                     </ul>
+                </li>
+                <li>
+                    <a href="" class="fa fa-shopping-cart"><span>UniShop</span></a>
                 </li>
             </ul>
         </nav>
