--- a/timbri.html
+++ b/timbri.html
@@ -38,14 +38,16 @@
 						
 						<!-- Nav -->
                         <nav id="nav">
+                            <br>
+                            <h1 id="logo"><a href="#">Universitalia</a></h1><br><br><br>
                             <ul>
                                 <li>
                                     <a class="fa fa-home" href="index.html"><span>Home</span></a>
                                     <ul>
-                                        <li><a href="#">Chi siamo</a></li>
-                                        <li><a href="#">Dove siamo</a></li>
-                                        <li><a href="#">Rilegature Tesi</a></li>
-                                        <li><a href="#">News</a></li>
+                                        <li><a href="#chisiamo">Chi siamo</a></li>
+                                        <li><a href="#dovesiamo">Dove siamo</a></li>
+                                        <li><a href="#rilegaturatesi">Rilegature Tesi</a></li>
+                                        <li><a href="#news">News</a></li>
 
                                     </ul>
 
@@ -53,16 +55,16 @@
                                 <li>
                                     <a href="" class="fa fa-book"><span>Libri</span></a>
                                     <ul>
-                                        <li><a href="#">Ricerca Libri</a></li>
+                                        <li><a href="#libreriaonline">Ricerca Libri</a></li>
                                         <li><a href="testIngresso.html">Test d'ingresso</a></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="rilegaturaTesi.html" class="fa fa-bookmark"><span>Rilegatura Tesi</span></a>
+                                    <a href="rilegaturaTesi.html" class="fa fa-graduation-cap"><span>Rilegatura Tesi</span></a>
                                 </li>
 
                                 <li>
-                                    <a href="" class="fa fa-tasks"><span>Servizi</span></a>
+                                    <a href="" class="fa fa-print"><span>Stampe Digitali</span></a>
                                     <ul>
                                         <li><a href="plotter.html">Plotter</a></li>
                                         <li><a href="stampe.html">Stampe</a></li>
@@ -70,12 +72,13 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="" class="fa fa-bookmark-o"><span>Editoria</span></a>
+                                    <a href="" class="fa fa-book"><span>Editoria</span></a>
                                     <ul>
-                                        <li><a href="pubblicaconnoi.html">Pubblica con noi</a></li>
-                                        <li><a href="#">Sito UP</a></li>
-                                        <li><a href="#">Sito DOWN</a></li>
+                                        <li><a href="http://universitaliaeditrice.it/" target="_blank">Pubblica con noi</a></li>
                                     </ul>
+                                </li>
+                                <li>
+                                    <a href="" class="fa fa-shopping-cart"><span>UniShop</span></a>
                                 </li>
                             </ul>
                         </nav>
