--- a/indexlibri.html
+++ b/indexlibri.html
@@ -2,6 +2,7 @@
 <html lang="en" class="no-js">
 	<head>
 		<meta charset="UTF-8" />
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<title>Book Preview with BookBlock</title>
