--- a/timbri.html
+++ b/timbri.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Timbri</title>
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
